# my-lang

./: .clang-format  .clang-tidy  .gitignore  ArenaAllocator_8cpp.html  ArenaAllocator_8cpp_source.html  ArenaAllocator_8hpp.html  ArenaAllocator_8hpp.js  ArenaAllocator_8hpp_source.html  CMakeLists.txt  CONTRIBUTING.md  DiagnosticManager_8cpp.html  DiagnosticManager_8cpp.js  DiagnosticManager_8cpp_source.html  DiagnosticManager_8hpp.html  DiagnosticManager_8hpp.js  DiagnosticManager_8hpp_source.html  Doxyfile  FileManager_8cpp.html  FileManager_8cpp_source.html  FileManager_8hpp.html  FileManager_8hpp.js  FileManager_8hpp_source.html  Lexer_8cpp.html  Lexer_8cpp.js  Lexer_8cpp_source.html  Lexer_8hpp.html  Lexer_8hpp.js  Lexer_8hpp_source.html  README.md  SourceLocation_8cpp.html  SourceLocation_8cpp_source.html  SourceLocation_8hpp.html  SourceLocation_8hpp.js  SourceLocation_8hpp_source.html  SourceManager_8cpp.html  SourceManager_8cpp.js  SourceManager_8cpp_source.html  SourceManager_8hpp.html  SourceManager_8hpp.js  SourceManager_8hpp_source.html  (+235 more)
.github/workflows/: ci.yml
docs/docbook/: dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dirs.xml  index.xml  main_8cpp.xml  main_8cpp_source.xml
docs/html/: files.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp_source.html  navtreedata.js  navtreeindex0.js
docs/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dirs.tex  main_8cpp.tex  main_8cpp_source.tex  refman.tex
docs/man/man3/: C__Users_karso_source_repos_my-lang_src_.3  main.cpp.3  noname
docs/rtf/: refman.rtf
docs/xml/: Doxyfile.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  main_8cpp.xml
include/ml/Basic/: ArenaAllocator.hpp  SourceLocation.hpp  StringInterner.hpp
include/ml/Diagnostics/: Errors.inc  Notes.inc  Warnings.inc
include/ml/Managers/: DiagnosticManager.hpp  FileManager.hpp  SourceManager.hpp
include/ml/Parse/: Lexer.hpp  Token.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  (+78 more)
src/: CMakeLists.txt  main.cpp
src/Basic/: ArenaAllocator.cpp  StringInterner.cpp
src/Managers/: DiagnosticManager.cpp  FileManager.cpp  SourceManager.cpp
src/Parse/: Lexer.cpp  Token.cpp
tests/: CMakeLists.txt  exampleTest.cpp  llvmTest.cpp
